--- a/web_template.yml
+++ b/web_template.yml
@@ -1,88 +1,102 @@
+--- 
 apiVersion: v1
 kind: Template
-metadata:
+metadata: 
   name: schemerator-web-template
-objects:
-- apiVersion: v1
-  kind: Service
-  metadata:
-    labels:
-      app: schemerator-web
-      expose: "true"
-    name: schemerator-web
-  spec:
-    ports:
-    - name: http
-      port: 8080
-      protocol: TCP
-      targetPort: 8080
-    selector:
-      app: schemerator-web
-    sessionAffinity: None
-    type: ClusterIP
-  status:
-    loadBalancer: {}
-- apiVersion: apps.openshift.io/v1
-  kind: DeploymentConfig
-  metadata:
-    labels:
-      app: schemerator-web
-    name: schemerator-web
-  spec:
-    replicas: 1
-    selector:
-      deploymentConfig: schemerator-web
-    strategy:
-      resources: {}
-      type: Recreate
-    template:
-      metadata:
-        labels:
-          app: schemerator-web
-          deploymentConfig: schemerator-web
-      spec:
-        containers:
-          - image: ${WEB_IMAGE}
-            imagePullPolicy: IfNotPresent
-            name: schemerator-web
-            ports:
-            - containerPort: ${{WEB_PORT}}
-              protocol: TCP
-          volumeMounts:
-          - mountPath: ${{MOUNT_PATH}}
-            name: ${{VOLUME_MOUNT_NAME}}
-        volumes:
-          - name: ${{VOLUME_MOUNT_NAME}}
-            persistentVolumeClaim:
-              claimName: ${{PVC_NAME}}
-- apiVersion: route.openshift.io/v1
-  kind: Route
-  metadata:
-    labels:
-      app: schemerator-web
-      expose: "true"
-    name: schemerator-web-route
-  spec:
-    port:
-      targetPort: 8080
-    to:
-      kind: Service
+objects: 
+  - 
+    apiVersion: v1
+    kind: Service
+    metadata: 
+      labels: 
+        app: schemerator-web
+        expose: "true"
       name: schemerator-web
-      weight: 100
-    wildcardPolicy: None
-parameters:
-  - name: WEB_PORT
-    description: Web Service Port
+    spec: 
+      ports: 
+        - 
+          name: http
+          port: 8080
+          protocol: TCP
+          targetPort: 8080
+      selector: 
+        app: schemerator-web
+      sessionAffinity: None
+      type: ClusterIP
+    status: 
+      loadBalancer: {}
+  - 
+    apiVersion: apps.openshift.io/v1
+    kind: DeploymentConfig
+    metadata: 
+      labels: 
+        app: schemerator-web
+      name: schemerator-web
+    spec: 
+      replicas: 1
+      selector: 
+        deploymentConfig: schemerator-web
+      strategy: 
+        resources: {}
+        type: Recreate
+      template: 
+        metadata: 
+          labels: 
+            app: schemerator-web
+            deploymentConfig: schemerator-web
+        spec: 
+          containers: 
+            - 
+              image: "${WEB_IMAGE}"
+              imagePullPolicy: IfNotPresent
+              name: schemerator-web
+              ports: 
+                - 
+                  containerPort: "${{WEB_PORT}}"
+                  protocol: TCP
+          volumeMounts: 
+            - 
+              mountPath: "${{MOUNT_PATH}}"
+              name: "${{VOLUME_MOUNT_NAME}}"
+          volumes: 
+            - 
+              name: "${{VOLUME_MOUNT_NAME}}"
+              persistentVolumeClaim: 
+                claimName: "${{PVC_NAME}}"
+  - 
+    apiVersion: route.openshift.io/v1
+    kind: Route
+    metadata: 
+      labels: 
+        app: schemerator-web
+        expose: "true"
+      name: schemerator-web-route
+    spec: 
+      port: 
+        targetPort: 8080
+      to: 
+        kind: Service
+        name: schemerator-web
+        weight: 100
+      wildcardPolicy: None
+parameters: 
+  - 
+    description: "Web Service Port"
+    name: WEB_PORT
     value: "8080"
-  - name: WEB_IMAGE
-    description: quay.io/tamber/schemerator-web:latest
+  - 
+    description: "quay.io/tamber/schemerator-web:latest"
+    name: WEB_IMAGE
     required: true
-  - name: PVC_NAME
-    description: Name of persistentVolumeClaim
+  - 
+    description: "Name of persistentVolumeClaim"
+    name: PVC_NAME
     required: true
-  - name: VOLUME_MOUNT_NAME
-    description: Name of Volume mount to link PVC to mountPath
+  - 
+    description: "Name of Volume mount to link PVC to mountPath"
+    name: VOLUME_MOUNT_NAME
     value: mypvc
-  - name: MOUNT_PATH
-    description: absolute path to mount inside pod
-    value: "/home/db"
+  - 
+    description: "absolute path to mount inside pod"
+    name: MOUNT_PATH
+    value: /home/db
