--- a/web_template.yml
+++ b/web_template.yml
@@ -85,9 +85,8 @@ parameters:
     name: WEB_PORT
     value: "8080"
   - 
-    description: "quay.io/tamber/schemerator-web:latest"
+    value: "quay.io/tamber/schemerator-web:latest"
     name: WEB_IMAGE
-    required: true
   - 
     description: "Name of persistentVolumeClaim"
     name: PVC_NAME
