--- a/parser_template.yml
+++ b/parser_template.yml
@@ -48,7 +48,7 @@ objects:
           containers: 
             - 
               image: "${PARSER_IMAGE}"
-              imagePullPolicy: IfNotPresent
+              imagePullPolicy: Always
               name: schemerator-parser
               ports: 
                 - 
