--- a/web_template.yml
+++ b/web_template.yml
@@ -48,7 +48,7 @@ objects:
           containers: 
             - 
               image: "${WEB_IMAGE}"
-              imagePullPolicy: IfNotPresent
+              imagePullPolicy: Always
               name: schemerator-web
               ports: 
                 - 
