added commands and fix problem in parser_template

--- a/parser_template.yml
+++ b/parser_template.yml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Template
 metadata: 
-  name: "schemerator-  -template"
+  name: "schemerator-parser-template"
 objects: 
   - 
     apiVersion: v1
